<resources>
    <string name="app_name">Xadrez</string>
    <string name="botao1MP">Jogar Contra Bot</string>
    <string name="botao2MP">Modo 2 Jogadores</string>
    <string name="botao3MP">Criar Jogo Online</string>
    <string name="botao4MP">Juntar Jogo Online</string>
    <string name="botao5MP">Créditos</string>

    <string name="perfil_name">Nome Jogador:</string>
    <string name="perfil_name_hint">[jogador]</string>

    /**Shared Preferences**/
    <string name="saved_name">saved_name</string>
    <string name="saved_photo">saved_photo</string>

    /**Image Descriptions**/
    <string name="perfil_photo">Foto perfil</string>
    <string name="btnPhoto">Tirar Fotografia</string>
    <string name="btnGallery">Escolher da Galeria</string>
    <string name="historico_ModoJogo">Modo de jogo</string>
    <string name="historicoJogadaPeca">Peca</string>
    <string name="tabuleiro">Tabuleiro</string>

    /**Exceptions**/
    <string name="null_activity">Problema ao gravar dados (Null Activity)</string>
    <string name="null_view">Problema na renderização dos componentes (Null View)</string>
    <string name="null_shared_preferences">Problema ao gravar/obter dados\n(Shared Preferences not found)</string>
    <string name="take_photo">Problema ao tirar foto</string>

    /**Dialogs**/
    <string name="error_title">Problema!</string>
    <string name="error_positive_button">Ok</string>
    <string name="question_title_leave_game">Sair do jogo</string>
    <string name="question_message_leave_game">Pretende terminar o jogo?</string>
    <string name="question_title_leave_game_TCP">Sair do jogo</string>
    <string name="question_message_leave_game_TCP">Pretendes terminar o jogo e a ligação?\n O jogador adversário irá jogar contra o Bot!</string>
    <string name="question_positive_button">Ok</string>
    <string name="question_negative_button">Cancelar</string>
    <string name="ip_positive_button">Ok</string>
    <string name="ip_negative_button">Cancelar</string>
    <string name="ip_title">IP do servidor</string>
    <string name="progress_title">Criar jogo online</string>
    <string name="progress_message">À espera do cliente</string>
    <string name="progress_title_espera">Jogo online</string>
    <string name="progress_message_espera">A preparar o campo de batalha…</string>
    <string name="error_save_historic">Problema ao gravar o histórico do jogo.</string>
    <string name="question_delete_historic_title">Apagar histórico</string>
    <string name="question_delete_historic_message">De certeza que pretendes apagar o histórico?</string>
    <string name="win_title"> Venceu</string>
    <string name="question_title_alterar_jogo">Alterar jogo</string>
    <string name="question_message_alterar_jogo_para_contra_bot">Pretendes alterar o modo de jogo?\nIrás jogar contra o bot!</string>
    <string name="question_message_alterar_jogo_para_contra_humano">Pretendes alterar o modo de jogo para 2 Jogadores - 1 Dispositivo?</string>
    <string name="error_socket_message">Problema nos sockets de rede</string>
    <string name="alert_title">Conexão interrompida!</string>
    <string name="alert_message">Irás jogar contra o bot!</string>
    <string name="error_juntar_jogo_rede">Servidor não encontrado!\nTenta mais tarde</string>

    /**Menus**/
    <string name="perfil">Perfil</string>
    <string name="historico">Histórico</string>
    <string name="historicoData">25 Dezembro</string>
    <string name="historico_Vencedor">Vencedor</string>

    /**Histórico**/
    <string name="headerHistoricoData">Data</string>
    <string name="headerHistoricoModoJogo">Jogo</string>
    <string name="headerHistoricoVencedor">Vencedor</string>
    <string name="historicoJogadaOrigem">Origem</string>
    <string name="historicoJogadaDestino">Destino</string>

    /**Promover Peao**/
    <string name="promover_peao_titilo">Escolha Peça</string>
    <string name="rainha">Rainha</string>
    <string name="torre">Torre</string>
    <string name="bispo">Bispo</string>
    <string name="cavalo">Cavalo</string>
    <string name="headerHistoricoJogadaPeca">Peça</string>
    <string name="headerHistoricoJogadaOrigem">Origem</string>
    <string name="headerHistoricoJogadaDestino">Destino</string>
    <string name="historicoVazio">Não existe histórico</string>
    <string name="apagar_historico">Apagar Histórico</string>

    <string name="android">Bot</string>

    /**Jogador VS Jogador**/
    <string name="tempo_JOGvsJOG">Jogar com tempo?</string>
    <string name="tempoMaximo_JOGvsJOG">Tempo Máximo</string>
    <string name="tempoGanho_JOGvsJOG">Tempo ganho</string>
    <string name="Jogador1_JOGvsJOG">Jogador 1 (brancas)</string>
    <string name="Jogador2_JOGvsJOG">Jogador 2 (pretas)</string>
    <string name="iniciarJogo_JOGvsJOG">Iniciar jogo</string>
    <string name="nomeJogador2_JOGvsJOG">[jogador2]</string>
    <string name="alterarJogo">Alterar jogo</string>
    <string name="jogador1">Jogador 1</string>
    <string name="dois_segundos">2s</string>
    <string name="dois_minutos">2m</string>

    /**Criar jogo rede**/
    <string name="button_criar_jogo">Criar jogo</string>

    /**Creditos**/
    <string name="creditosTexto">Daniel Moreira 21240321\n\n
                                Tiago Coutinho 21250388\n\n
                                Arquiteturas Móveis 2017/2018\n
                                Álvaro Santos</string>
</resources>
