<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.isec.tiagodaniel.xadrez.Activities.PerfilActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lblNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/fonty"
            android:text="@string/perfil_name"
            android:textColor="@color/title"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNome"
            android:labelFor="@+id/lblNome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:fontFamily="@font/fonty"
            android:textSize="30sp"
            android:textStyle="bold"
            android:hint="@string/perfil_name_hint"
            android:textColor="@color/edit"
            android:textColorHint="@color/tabLight"
            android:textAlignment="center" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imvPhoto"
            android:layout_width="135pt"
            android:layout_height="135pt"
            android:contentDescription="@string/perfil_photo"
            android:src="@drawable/b_peao" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btnPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@mipmap/ic_add_a_photo_black_48dp"
            android:layout_marginEnd="20dp"
            android:onClick="onTirarFoto"
            android:contentDescription="@string/btnPhoto" />

        <ImageButton
            android:id="@+id/btnGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSelecionarImagem"
            android:background="@null"
            android:src="@mipmap/ic_insert_photo_black_48dp"
            android:contentDescription="@string/btnGallery"/>

    </LinearLayout>

</LinearLayout>
