<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tabLightTransparent"
    android:padding="20dp"
    android:id="@+id/linhaJogada">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_rotate"
        android:layout_weight="1"
        android:id="@+id/historicoJogadaPeca"
        android:contentDescription="@string/historico_ModoJogo" />

    <TextView
        android:textSize="24sp"
        android:text="@string/historicoJogadaOrigem"
        android:gravity="center"
        android:id="@+id/historicoJogadaOrigem"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fonty"
        android:textStyle="bold"
        android:textColor="@color/title"/>

    <TextView
        android:textSize="24sp"
        android:text="@string/historicoJogadaDestino"
        android:gravity="center"
        android:id="@+id/historicoJogadaDestino"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fonty"
        android:textStyle="bold"
        android:textColor="@color/title"/>

</LinearLayout>