<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="pt.isec.tiagodaniel.xadrez.Activities.ConfigurarJogoRedeActivity"
    android:background="@drawable/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/tabLightTransparent"
        android:layout_weight="1">

        <Switch
            android:id="@+id/switchJogarComTempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempo_JOGvsJOG"
            android:fontFamily="@font/fonty"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempoMaximo_JOGvsJOG"
            android:fontFamily="@font/fonty"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/title"
            android:layout_marginTop="15pt"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/seekBarTempoMaximo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtTempoMaximo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fonty"
                android:textSize="20sp"
                android:text="@string/dois_minutos"
                android:textStyle="bold"
                android:textColor="@color/title"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempoGanho_JOGvsJOG"
            android:fontFamily="@font/fonty"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/title"
            android:layout_marginTop="15pt"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/seekBarTempoGanho"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtTempoGanho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fonty"
                android:textSize="20sp"
                android:text="@string/dois_segundos"
                android:textStyle="bold"
                android:textColor="@color/title"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_criar_jogo"
        android:onClick="onComecarJogo_JOG_REDE"
        android:padding="15dp"
        android:layout_margin="5dp"
        android:fontFamily="@font/fonty"
        android:background="@drawable/rounded_button"
        android:drawableStart="@mipmap/ic_wifi_black_18dp"
        android:drawableEnd="@mipmap/ic_face_black_18dp"
        android:textColor="@color/title"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>
