<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.isec.tiagodaniel.xadrez.Activities.MainActivity"
    android:padding="40dp"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:typeface="monospace"
        android:textStyle="bold"
        android:fontFamily="@font/fonty"
        android:textColor="@color/title"
        android:textAlignment="center"
        android:layout_gravity="top|center"
        android:layout_margin="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@mipmap/ic_face_black_18dp"
            android:drawableEnd="@mipmap/ic_android_black_18dp"
            android:fontFamily="@font/fonty"
            android:onClick="onJogarContraPC"
            android:padding="10dp"
            android:text="@string/botao1MP"
            android:textColor="@color/title"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao2MP"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:onClick="onModo2Jogadores"
            android:fontFamily="@font/fonty"
            android:background="@drawable/rounded_button"
            android:drawableStart="@mipmap/ic_face_black_18dp"
            android:drawableEnd="@mipmap/ic_face_black_18dp"
            android:textColor="@color/title"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao3MP"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:onClick="onCriarJogoOnline"
            android:fontFamily="@font/fonty"
            android:background="@drawable/rounded_button"
            android:drawableStart="@mipmap/ic_wifi_black_18dp"
            android:drawableEnd="@mipmap/ic_face_black_18dp"
            android:textColor="@color/title"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao4MP"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:onClick="onJuntarJogoOnline"
            android:fontFamily="@font/fonty"
            android:background="@drawable/rounded_button"
            android:drawableStart="@mipmap/ic_face_black_18dp"
            android:drawableEnd="@mipmap/ic_wifi_black_18dp"
            android:textColor="@color/title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao5MP"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:onClick="onCreditos"
            android:fontFamily="@font/fonty"
            android:background="@drawable/rounded_button"
            android:drawableStart="@mipmap/ic_fingerprint_black_18dp"
            android:drawableEnd="@mipmap/ic_fingerprint_black_18dp"
            android:textColor="@color/title"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
