<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.isec.tiagodaniel.xadrez.Activities.ActivityPromocaoPeao"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/promover_peao_titilo"
        android:textSize="@dimen/activity_promocao_peao_text_view"
        android:typeface="monospace"
        android:textStyle="bold"
        android:fontFamily="@font/fonty"
        android:textColor="@color/title"
        android:textAlignment="center"
        android:layout_gravity="top|center"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:padding="30dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/b_rainha"
            android:drawableEnd="@drawable/p_rainha"
            android:fontFamily="@font/fonty"
            android:onClick="onRainha"
            android:padding="15dp"
            android:text="@string/rainha"
            android:textColor="@color/title"
            android:textSize="@dimen/activity_promocao_peao_button"
            android:textStyle="bold" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bispo"
            android:padding="15dp"
            android:layout_margin="5dp"
            android:onClick="onBispo"
            android:fontFamily="@font/fonty"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/b_bispo"
            android:drawableEnd="@drawable/p_bispo"
            android:textColor="@color/title"
            android:textSize="@dimen/activity_promocao_peao_button"
            android:textStyle="bold"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/torre"
            android:padding="15dp"
            android:layout_margin="5dp"
            android:onClick="onTorre"
            android:fontFamily="@font/fonty"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/b_torre"
            android:drawableEnd="@drawable/p_torre"
            android:textColor="@color/title"
            android:textSize="@dimen/activity_promocao_peao_button"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cavalo"
            android:padding="15dp"
            android:layout_margin="5dp"
            android:onClick="onCavalo"
            android:fontFamily="@font/fonty"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/b_cavalo"
            android:drawableEnd="@drawable/p_cavalo"
            android:textColor="@color/title"
            android:textSize="@dimen/activity_promocao_peao_button"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>