<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tabLightTransparent"
    android:padding="20dp"
    android:id="@+id/linha">

    <TextView
        android:textSize="@dimen/linha_historico"
        android:text="@string/historicoData"
        android:gravity="center"
        android:id="@+id/historicoData"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fonty"
        android:textStyle="bold"
        android:textColor="@color/title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_rotate"
            android:layout_weight="1"
            android:id="@+id/historicoModoJogo1"
            android:contentDescription="@string/historico_ModoJogo" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_rotate"
            android:layout_weight="1"
            android:id="@+id/historicoModoJogo2"
            android:contentDescription="@string/historico_ModoJogo" />

    </LinearLayout>

    <TextView
        android:textSize="@dimen/linha_historico"
        android:text="@string/historico_Vencedor"
        android:gravity="center"
        android:id="@+id/historicoVencedor"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fonty"
        android:textStyle="bold"
        android:textColor="@color/title"/>
</LinearLayout>