<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context="pt.isec.tiagodaniel.xadrez.Activities.HistoricoJogadasActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tabLight"
        android:layout_marginBottom="10dp"
        android:padding="20dp">

        <TextView
            android:textSize="@dimen/header_historico_jogada"
            android:text="@string/historicoJogadaPeca"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/historicoJogadaPeca"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fonty"
            android:textStyle="bold"
            android:textColor="@color/title"/>

        <TextView
            android:textSize="@dimen/header_historico"
            android:text="@string/historicoJogadaOrigem"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/historicoJogadaOrigem"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fonty"
            android:textStyle="bold"
            android:textColor="@color/title"/>

        <TextView
            android:textSize="@dimen/header_historico_jogada"
            android:text="@string/historicoJogadaDestino"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/historicoJogadaDestino"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fonty"
            android:textStyle="bold"
            android:textColor="@color/title"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvLista"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
